syntax = "proto3";

package star_types;

message ChannelTransactionRequest {
    bytes payload = 1;
}

message ChannelTransactionResponse {
    bytes payload = 1;
}